어머니한테 보여줄꺼

--- a/index.html
+++ b/index.html
@@ -1,12 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="apply .css">
+    <title>CSS3 property basec</title>
+    <header>
+        <title>chapter_5</title>
+    </header>
+    <nav>
+        <style>
+            div {
+                border: 3px solid brown;
+                box-shadow: 10px 10px 30px coral;
+                text-shadow: 5px 5px 5px blue
+            }
+        </style>
 </head>
+
 <body>
-     <h1>김우진</h1>
+    <div>
+        <h1>텍스트</h1>
+    </div>
+    <span>휴식처</span>
 </body>
-</html>
+
+<body>
+    <div>
+        <h1>※우진 월계수관 ※
+
+            <Head>
+        </h1>
+    </div>
+    <div>
+        <ul>
+            <li><a href="#">menu-0</a></li> 
+            <li><a href="http://www.naver.com">menu-1</a></li>
+            <li><a href="https://www.youtube.com/">menu-2</a></li>
+            <li><a href="https://www.daum.net/">menu-3</a></li>
+        </ul>
+        </nav>
+        <section>
+            <article>
+    </div>
+    <div>
+        <h1>갤러리</h1>
+        <p>선악균형이란? </p>
+        </article>
+        <article></article>
+        <h2>희생이란 무엇인가?</h2>
+        <p2> 깊은 생각이란?<p2>
+                </article>
+                </section>
+                <footer>
+                    <address> 주소를입력하시오(대구).</address>
+                </footer>
+    </div>
+    <div>
+    </div>
+    <span>클릭하시오</span>
+    </div>
+</body>
+
+<body>
+    <form>
+        <textarea>당신을 응원합니다.</textarea>
+    </form>
+</body>
+
+<body>
+    <select>
+        <option>경상도</option>
+        <option>경기도 </option>
+        <option>강원도 </option>
+        <option>전라도 </option>
+    </select>
+</body>
+<DOCTYPE html>
+    <html>
+
+    <head>
+        <title> CSS3 <Select> Basic</title>
+        <style>
+            ul {
+                overflow: hidden;
+            }
+
+            li {
+                list-style: none;
+                float: left;
+                padding: 15px;
+            }
+
+            li:first-child {
+                border-radius: 10px 0 0 10px;
+            }
+
+            li:last-child {
+                border-radius: 0 10px 10px 0;
+            }
+
+            li:nth-child(2n) {
+                background-color: #FF0003;
+            }
+
+            li:nth-child(2n+1) {
+                background-color: #b9e482;
+            }
+        </style>
+    </head>
+
+    <body>
+        <ul>
+            <li>Fist</li>
+            <li>Second</li>
+            <li>Third</li>
+            <li>Fourth</li>
+            <li>Fifth</li>
+            <li>Sixth</li>
+            <li>Seventh</li>
+        </ul>
+    </body>
+    </style>
+    </head>
+
+    <body>
+     
+    </body>
+
+    <style>
+
+    </style>
+
+    </html>
