--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <!-- div.jumbotron -->
                 <div class="jumbotron">
                     <h1>텍스트</h1>
-                    <p> <img src="person-5843476_1920.jpg" width="760px" height="400px" </p>
+                    <p> <img src="person-5843476_1920.jpg" width="400px" height="350px"> </p>
                                  
                     <!-- a.btn.btn-primary.btn-lg[href=#]{Learn More} -->
                     <a href="https://recruit.mnd.go.kr:450/recruit.do" class="btn btn-primary btn-lg"> 텍스트</a>
